# Licensed to the Apache Software Foundation (ASF) under one or more
# contributor license agreements.  See the NOTICE file distributed with
# this work for additional information regarding copyright ownership.
# The ASF licenses this file to You under the Apache License, Version 2.0
# (the "License"); you may not use this file except in compliance with
# the License.  You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# This BUILD file marks bazel/tools/ as a Bazel package so that loads
# of the form `//bazel/tools:xxx.bzl` are valid. The directory only
# hosts .bzl files (brpc_proto_library.bzl / proto_gen.bzl) and does
# not define any build targets.

package(default_visibility = ["//visibility:public"])

exports_files(glob(["*.bzl"]))
